--- a/dev/sass/main.scss
+++ b/dev/sass/main.scss
@@ -7,5 +7,6 @@
 
 @import "home-page/home-page-header";
 @import "home-page/main-message";
-@import "home-page/content-message";
-@import "home-page/content-details";
+@import "home-page/portfolio-section";
+@import "home-page/team-section";
+@import "home-page/contact-section";
