--- a/dev/sass/share/_variables.scss
+++ b/dev/sass/share/_variables.scss
@@ -1,28 +1,19 @@
 // http://flatuicolors.com/
 
-$white : #FFF;
-$blue : #2980b9;
-$red : red;
+$white: #FFF;
+$secondary: #0076A7;
 
-$backgroundBlue : #1f2022;
-$midblue: #337a98;
-$lightblue: #4090b1;
-$primaryBlue: #246784;
-$orange: #fd742b;
+$primary: #ABABAC;
 
-$grey : #ecf0f1;
-$yellow : #F3C230;
-$darkgrey: #797A7A;
-
-$green: #5cb85c;
 
 
 // buttons
 .btn-primary{
-	background-color: $orange;
+	background-color: $primary;
+	padding: 15px 20px;
 	border: 0;
 	&:hover{
-	background-color: #fc6220;
+		background-color: #0076A7;
 	}
 
 
