--- a/dev/sass/home-page/_main-message.scss
+++ b/dev/sass/home-page/_main-message.scss
@@ -1,25 +1,27 @@
 .main-message{
-	padding: 17em 0;
-
+	padding: 15em 0;
+	
 	.message-details{
-		float: left;
+		text-align: left;
 		h1{
 
 		}
-		p{
-			font-size: 1.7em;
-		}
-		hr {
-			margin-top: 20px;
-			margin-bottom: 20px;
-			border: 0;
-			border-top: 1px solid #000;
-		}
-		span{
-			background: #000;
-			padding: 5px;
-			border-radius: 8px;
-			color: #eee;
+
+		img{
+			height: auto;
+			width: 300px;		}
+			p{
+				font-size: 1.7em;
+			}
+			hr {
+				width: 60%;
+				margin-left: 0;
+			}
+			span{
+				background: #000;
+				padding: 5px;
+				border-radius: 8px;
+				color: #eee;
+			}
 		}
 	}
-}
