--- a/dev/sass/share/_body.scss
+++ b/dev/sass/share/_body.scss
@@ -5,11 +5,15 @@ body{
 
 h1,h2,h3,h4,h5{
 	text-transform: uppercase;
+	font-family: 'Rufina', serif;
 }
 
 h1{
 	font-size: 5em;
 
+}
+h2{
+	font-size: 4em;
 }
 
 p{
@@ -21,6 +25,7 @@ span{
 }
 
 hr {
+	width: 50%;
 	margin-top: 20px;
 	margin-bottom: 20px;
 	border: 0;
