--- a/dev/public/css/main.css
+++ b/dev/public/css/main.css
@@ -1,12 +1,12 @@
-/* line 11, ../../sass/share/_variables.scss */
+/* line 15, ../../sass/share/_variables.scss */
 .btn-primary {
-  background-color: #ABABAC;
+  background-color: #09B391;
   padding: 15px 20px;
   border: 0;
 }
-/* line 15, ../../sass/share/_variables.scss */
+/* line 19, ../../sass/share/_variables.scss */
 .btn-primary:hover {
-  background-color: #0076A7;
+  background-color: #039678;
 }
 
 /* line 1, ../../sass/share/_body.scss */
@@ -16,7 +16,7 @@ body {
 }
 
 /* line 6, ../../sass/share/_body.scss */
-h1, h2, h3, h4, h5 {
+h1, h2 {
   text-transform: uppercase;
   font-family: 'Rufina', serif;
 }
@@ -32,16 +32,23 @@ h2 {
 }
 
 /* line 19, ../../sass/share/_body.scss */
+h3 {
+  font-size: 1.8em;
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
+}
+
+/* line 25, ../../sass/share/_body.scss */
 p {
   font-family: 'PT Sans', sans-serif;
 }
 
-/* line 23, ../../sass/share/_body.scss */
+/* line 29, ../../sass/share/_body.scss */
 span {
   font-family: 'PT Sans', sans-serif;
 }
 
-/* line 27, ../../sass/share/_body.scss */
+/* line 33, ../../sass/share/_body.scss */
 hr {
   width: 50%;
   margin-top: 20px;
@@ -50,7 +57,56 @@ hr {
   border-top: 1px solid #000;
 }
 
-/* line 1, ../../sass/share/_nav.scss */
+@media screen and (max-width: 992px) {
+  /* line 49, ../../sass/share/_body.scss */
+  h1 {
+    font-size: 4em;
+  }
+
+  /* line 53, ../../sass/share/_body.scss */
+  h2 {
+    font-size: 3em;
+  }
+
+  /* line 57, ../../sass/share/_body.scss */
+  h3 {
+    font-size: 1.3em;
+  }
+}
+@media screen and (max-width: 767px) {
+  /* line 67, ../../sass/share/_body.scss */
+  h1 {
+    font-size: 3em;
+  }
+
+  /* line 71, ../../sass/share/_body.scss */
+  h2 {
+    font-size: 2em;
+    text-align: center;
+  }
+
+  /* line 76, ../../sass/share/_body.scss */
+  h3 {
+    font-size: 1.3em;
+  }
+
+  /* line 80, ../../sass/share/_body.scss */
+  .nav {
+    text-align: left;
+  }
+}
+@media screen and (max-width: 500px) {
+  /* line 86, ../../sass/share/_body.scss */
+  h1 {
+    font-size: 2em;
+  }
+
+  /* line 90, ../../sass/share/_body.scss */
+  h2 {
+    font-size: 1.5em;
+  }
+}
+/* line 2, ../../sass/share/_nav.scss */
 nav {
   padding: 10px 0;
   background: #000;
@@ -58,135 +114,430 @@ nav {
   top: 0;
   width: 100%;
   z-index: 100;
+  border-bottom: 3px solid #039678;
   text-align: center;
 }
-/* line 10, ../../sass/share/_nav.scss */
+/* line 16, ../../sass/share/_nav.scss */
+nav .navbar-toggle {
+  position: relative;
+  float: right;
+  padding: 9px 10px;
+  margin-top: 8px;
+  margin-right: 15px;
+  margin-bottom: 8px;
+  background-color: #09B391;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+/* line 30, ../../sass/share/_nav.scss */
+nav .navbar-toggle .icon-bar {
+  background-color: #eee;
+}
+/* line 37, ../../sass/share/_nav.scss */
+nav .navbar-brand img {
+  width: 200px;
+}
+/* line 44, ../../sass/share/_nav.scss */
+nav .navbar-collapse.in {
+  overflow-y: auto;
+}
+/* line 51, ../../sass/share/_nav.scss */
+nav .navbar-collapse ul {
+  margin: 15px 0;
+}
+/* line 56, ../../sass/share/_nav.scss */
+nav .collapse .in {
+  display: block;
+}
+/* line 59, ../../sass/share/_nav.scss */
+nav .social-media {
+  list-style: none;
+  position: absolute;
+  right: 70px;
+  top: 122px;
+}
+/* line 64, ../../sass/share/_nav.scss */
+nav .social-media a {
+  color: #000;
+}
+/* line 66, ../../sass/share/_nav.scss */
+nav .social-media a:hover {
+  color: #09B391;
+}
+/* line 71, ../../sass/share/_nav.scss */
+nav .social-media li {
+  padding: 0;
+}
+/* line 75, ../../sass/share/_nav.scss */
+nav .social-media i {
+  font-size: 3em;
+}
+/* line 83, ../../sass/share/_nav.scss */
 nav ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
-/* line 14, ../../sass/share/_nav.scss */
+/* line 87, ../../sass/share/_nav.scss */
 nav ul li {
   display: inline-block;
   padding: 0 40px;
 }
-/* line 17, ../../sass/share/_nav.scss */
+/* line 90, ../../sass/share/_nav.scss */
 nav ul li a {
   font-family: 'Roboto Slab', serif;
   font-weight: 100;
   font-size: 1.5em;
   color: #fff;
 }
-/* line 22, ../../sass/share/_nav.scss */
+/* line 95, ../../sass/share/_nav.scss */
 nav ul li a:hover {
   color: #eee;
 }
-/* line 25, ../../sass/share/_nav.scss */
+/* line 98, ../../sass/share/_nav.scss */
 nav ul li a img {
   height: auto;
-  width: 100px;
+  width: 75px;
 }
-
-/* line 2, ../../sass/home-page/_home-page-header.scss */
-.navbar-brand img {
-  height: auto;
-  width: 100px;
+@media screen and (max-width: 992px) {
+  /* line 111, ../../sass/share/_nav.scss */
+  nav .main-nav li {
+    padding: 0 20px;
+  }
 }
-
-/* line 8, ../../sass/home-page/_home-page-header.scss */
-.navbar-inverse {
-  background-color: #222;
-  border: none;
-  padding: 15px 0;
+@media screen and (min-width: 768px) and (max-width: 1920px) {
+  /* line 119, ../../sass/share/_nav.scss */
+  nav .navbar-brand {
+    display: none;
+  }
 }
-
-/* line 14, ../../sass/home-page/_home-page-header.scss */
-.navbar-inverse .navbar-nav > li > a {
-  color: #eee;
-}
-
-/* line 18, ../../sass/home-page/_home-page-header.scss */
-.navbar-right {
-  margin: 6px 0;
+@media screen and (max-width: 767px) {
+  /* line 125, ../../sass/share/_nav.scss */
+  nav .navbar-collapse {
+    width: 100%;
+  }
+  /* line 127, ../../sass/share/_nav.scss */
+  nav .navbar-collapse .main-nav {
+    text-align: left;
+    margin: 30px 0 8px;
+  }
+  /* line 131, ../../sass/share/_nav.scss */
+  nav .navbar-collapse .main-nav ul {
+    border-top: 2px solid #eee;
+  }
+  /* line 135, ../../sass/share/_nav.scss */
+  nav .navbar-collapse .main-nav li {
+    display: block;
+    padding: 0;
+  }
+  /* line 140, ../../sass/share/_nav.scss */
+  nav .navbar-collapse img {
+    display: none;
+  }
 }
 
 /* line 1, ../../sass/home-page/_main-message.scss */
 .main-message {
   padding: 15em 0;
 }
-/* line 4, ../../sass/home-page/_main-message.scss */
-.main-message .message-details {
-  text-align: left;
-}
-/* line 10, ../../sass/home-page/_main-message.scss */
+/* line 5, ../../sass/home-page/_main-message.scss */
 .main-message .message-details img {
-  height: auto;
   width: 300px;
 }
-/* line 13, ../../sass/home-page/_main-message.scss */
+/* line 8, ../../sass/home-page/_main-message.scss */
 .main-message .message-details p {
   font-size: 1.7em;
 }
-/* line 16, ../../sass/home-page/_main-message.scss */
+/* line 11, ../../sass/home-page/_main-message.scss */
 .main-message .message-details hr {
   width: 60%;
   margin-left: 0;
 }
-/* line 20, ../../sass/home-page/_main-message.scss */
+/* line 15, ../../sass/home-page/_main-message.scss */
 .main-message .message-details span {
   background: #000;
-  padding: 5px;
-  border-radius: 8px;
+  padding: 3px;
+  border-radius: 4px;
+  font-size: .8em;
   color: #eee;
+  margin: 10px;
 }
 
+@media screen and (max-width: 767px) {
+  /* line 28, ../../sass/home-page/_main-message.scss */
+  .main-message {
+    padding: 9em 0;
+  }
+  /* line 32, ../../sass/home-page/_main-message.scss */
+  .main-message .message-details {
+    text-align: center;
+  }
+  /* line 34, ../../sass/home-page/_main-message.scss */
+  .main-message .message-details hr {
+    display: none;
+  }
+  /* line 39, ../../sass/home-page/_main-message.scss */
+  .main-message .message-details img {
+    width: 250px;
+    display: none;
+  }
+  /* line 44, ../../sass/home-page/_main-message.scss */
+  .main-message .message-details span {
+    display: none;
+  }
+}
+@media screen and (max-width: 500px) {
+  /* line 55, ../../sass/home-page/_main-message.scss */
+  h1 {
+    margin-bottom: 10px;
+  }
+}
 /* line 1, ../../sass/home-page/_portfolio-section.scss */
 .portfolio-section {
   padding: 15em 0;
   text-align: center;
   background: #fff;
 }
-/* line 6, ../../sass/home-page/_portfolio-section.scss */
+@media screen and (max-width: 767px) {
+  /* line 1, ../../sass/home-page/_portfolio-section.scss */
+  .portfolio-section {
+    padding: 9em 0;
+  }
+}
+/* line 10, ../../sass/home-page/_portfolio-section.scss */
 .portfolio-section .projects {
-  padding: 25px 0;
+  padding: 25px 0 45px 0;
 }
-/* line 8, ../../sass/home-page/_portfolio-section.scss */
-.portfolio-section .projects h3 {
-  font-size: 1.3em;
-}
-/* line 11, ../../sass/home-page/_portfolio-section.scss */
+/* line 13, ../../sass/home-page/_portfolio-section.scss */
 .portfolio-section .projects img {
   max-width: 100%;
-  width: 280px;
   border: 1px solid #eee;
+}
+@media screen and (max-width: 767px) {
+  /* line 13, ../../sass/home-page/_portfolio-section.scss */
+  .portfolio-section .projects img {
+    margin-bottom: 2em;
+  }
 }
 
 /* line 1, ../../sass/home-page/_team-section.scss */
 .team-section {
-  padding: 15em 0;
-  text-align: center;
-}
-/* line 6, ../../sass/home-page/_team-section.scss */
-.team-section .team-members img {
-  padding: 25px 0;
-}
-
-/* line 1, ../../sass/home-page/_contact-section.scss */
-.contact-section {
   background: #fff;
   padding: 15em 0;
   text-align: center;
 }
-/* line 7, ../../sass/home-page/_contact-section.scss */
+@media screen and (max-width: 767px) {
+  /* line 1, ../../sass/home-page/_team-section.scss */
+  .team-section {
+    padding: 9em 0;
+  }
+}
+@media screen and (max-width: 500px) {
+  /* line 14, ../../sass/home-page/_team-section.scss */
+  .team-section .team-members img {
+    border: none;
+    margin: 0 auto;
+  }
+}
+/* line 19, ../../sass/home-page/_team-section.scss */
+.team-section .team-members img {
+  margin-bottom: 25px;
+  max-width: 100%;
+  border: 12px solid #eee;
+}
+
+/* line 1, ../../sass/home-page/_contact-section.scss */
+.contact-section {
+  background: url(../images/classy_fabric.png);
+  padding: 15em 0;
+  text-align: center;
+}
+@media screen and (max-width: 767px) {
+  /* line 1, ../../sass/home-page/_contact-section.scss */
+  .contact-section {
+    padding: 9em 0;
+  }
+}
+/* line 10, ../../sass/home-page/_contact-section.scss */
+.contact-section .contact-message {
+  color: #eee;
+}
+/* line 14, ../../sass/home-page/_contact-section.scss */
+.contact-section .contact-details {
+  padding: 25px 15px;
+}
+/* line 17, ../../sass/home-page/_contact-section.scss */
+.contact-section .contact-details .btn-primary {
+  float: left;
+}
+/* line 21, ../../sass/home-page/_contact-section.scss */
+.contact-section .contact-details form {
+  max-width: 400px;
+  margin: 0 auto;
+}
+/* line 25, ../../sass/home-page/_contact-section.scss */
 .contact-section .contact-details h3 {
   padding: 10px 0;
 }
-/* line 10, ../../sass/home-page/_contact-section.scss */
+/* line 28, ../../sass/home-page/_contact-section.scss */
 .contact-section .contact-details i {
   border-radius: 50%;
   margin-bottom: 15px;
   padding: 60px;
   font-size: 6em;
   background: #eee;
+}
+/* line 36, ../../sass/home-page/_contact-section.scss */
+.contact-section .contact-details label {
+  float: left;
+  color: #eee;
+}
+/* line 40, ../../sass/home-page/_contact-section.scss */
+.contact-section .contact-details select {
+  margin-bottom: 15px;
+}
+
+/* line 2, ../../sass/home-page/_footer-section.scss */
+.created-by {
+  background: #000;
+  padding: 30px 0;
+  border-top: 4px solid #09B391;
+  font-family: helvetica sans-serif;
+}
+@media screen and (max-width: 767px) {
+  /* line 2, ../../sass/home-page/_footer-section.scss */
+  .created-by {
+    text-align: center;
+  }
+}
+/* line 13, ../../sass/home-page/_footer-section.scss */
+.created-by i {
+  font-size: 20px;
+  padding: 0 5px;
+}
+/* line 19, ../../sass/home-page/_footer-section.scss */
+.created-by .footer-logo {
+  padding: 0;
+}
+/* line 22, ../../sass/home-page/_footer-section.scss */
+.created-by .footer-logo img {
+  width: 175px;
+}
+/* line 27, ../../sass/home-page/_footer-section.scss */
+.created-by .nav-links {
+  padding-top: 5px;
+  padding-left: 0;
+  padding-right: 0;
+  font-size: 13px;
+  text-align: center;
+}
+/* line 34, ../../sass/home-page/_footer-section.scss */
+.created-by .nav-links ul {
+  padding: 0;
+}
+/* line 39, ../../sass/home-page/_footer-section.scss */
+.created-by .nav-links li {
+  margin: 0 2px;
+  display: inline-block;
+}
+/* line 43, ../../sass/home-page/_footer-section.scss */
+.created-by .nav-links li + li {
+  border-left: 1px solid #000;
+  padding: 0 5px;
+}
+/* line 49, ../../sass/home-page/_footer-section.scss */
+.created-by .nav-links a {
+  color: #eee;
+  text-transform: uppercase;
+}
+@media screen and (max-width: 767px) {
+  /* line 27, ../../sass/home-page/_footer-section.scss */
+  .created-by .nav-links {
+    display: none;
+  }
+}
+/* line 62, ../../sass/home-page/_footer-section.scss */
+.created-by .social-links li {
+  display: inline-block;
+}
+/* line 65, ../../sass/home-page/_footer-section.scss */
+.created-by .social-links ul {
+  float: right;
+  padding: 0;
+  list-style: none;
+}
+/* line 70, ../../sass/home-page/_footer-section.scss */
+.created-by .social-links i {
+  color: #09B391;
+}
+@media screen and (max-width: 767px) {
+  /* line 75, ../../sass/home-page/_footer-section.scss */
+  .created-by .social-links ul {
+    float: none;
+    margin-top: 10px;
+    padding-right: 25px;
+  }
+}
+/* line 84, ../../sass/home-page/_footer-section.scss */
+.created-by .pull-right {
+  position: fixed;
+  right: 22px;
+  bottom: 10px;
+  z-index: 99999;
+  color: blue;
+}
+
+/* line 1, ../../sass/home-page/_services-section.scss */
+.services-section {
+  padding: 15em 0;
+}
+@media screen and (max-width: 767px) {
+  /* line 1, ../../sass/home-page/_services-section.scss */
+  .services-section {
+    padding: 9em 0;
+  }
+}
+/* line 8, ../../sass/home-page/_services-section.scss */
+.services-section hr {
+  float: left;
+}
+@media screen and (max-width: 767px) {
+  /* line 8, ../../sass/home-page/_services-section.scss */
+  .services-section hr {
+    float: none;
+  }
+}
+/* line 16, ../../sass/home-page/_services-section.scss */
+.services-section .services-details {
+  text-align: center;
+  max-width: 1140px;
+  margin: 0 auto;
+}
+/* line 21, ../../sass/home-page/_services-section.scss */
+.services-section .services-details h3 {
+  margin: 41px 0;
+}
+/* line 24, ../../sass/home-page/_services-section.scss */
+.services-section .services-details i {
+  font-size: 6em;
+  margin-bottom: 20px;
+  border: 12px solid #fff;
+  min-width: 200px;
+  min-height: 200px;
+  border-radius: 50%;
+  padding: 60px;
+  position: relative;
+}
+/* line 37, ../../sass/home-page/_services-section.scss */
+.services-section .services-details .marketing i {
+  background: #E65555;
+}
+/* line 43, ../../sass/home-page/_services-section.scss */
+.services-section .services-details .ecommerce i {
+  background: #45B156;
+}
+/* line 49, ../../sass/home-page/_services-section.scss */
+.services-section .services-details .custom i {
+  background: #6068C7;
 }
