--- a/dev/sass/share/_body.scss
+++ b/dev/sass/share/_body.scss
@@ -3,7 +3,7 @@ body{
 	background: #eee;
 }
 
-h1,h2,h3,h4,h5{
+h1,h2,{
 	text-transform: uppercase;
 	font-family: 'Rufina', serif;
 }
@@ -14,6 +14,12 @@ h1{
 }
 h2{
 	font-size: 4em;
+}
+
+h3{
+	font-size: 1.8em;
+	font-family: 'Lato', sans-serif;
+	font-weight: 300;
 }
 
 p{
@@ -31,3 +37,60 @@ hr {
 	border: 0;
 	border-top: 1px solid #000;
 }
+
+@media screen and (max-width: 767px){
+	// .main-message{
+	// 	background: red;
+	// }
+}
+
+
+@media screen and (max-width: 992px){
+	h1{
+		font-size: 4em;
+	}
+
+	h2{
+		font-size: 3em;
+	}
+
+	h3{
+		font-size: 1.3em;
+	}
+
+
+}
+
+
+
+@media screen and (max-width: 767px){
+	h1{
+		font-size: 3em;
+	}
+
+	h2{
+		font-size: 2em;
+		text-align: center;
+	}
+
+	h3{
+		font-size: 1.3em;
+	}
+
+	.nav{
+		text-align: left;
+	}
+}
+
+@media screen and (max-width: 500px){
+	h1{
+		font-size: 2em;
+	}
+
+	h2{
+		font-size: 1.5em;
+	}
+}
+
+
+
