--- a/dev/sass/share/_nav.scss
+++ b/dev/sass/share/_nav.scss
@@ -1,3 +1,4 @@
+
 nav{
 	padding: 10px 0;
 	background: #000;
@@ -5,7 +6,79 @@ nav{
 	top: 0;
 	width: 100%;
 	z-index: 100;
+	border-bottom: 3px solid #039678;
 	text-align: center;
+
+	@media screen and (max-width: 500px){
+		
+	}
+
+	.navbar-toggle {
+		position: relative;
+		float: right;
+		padding: 9px 10px;
+		margin-top: 8px;
+		margin-right: 15px;
+		margin-bottom: 8px;
+		background-color: $action;
+		background-image: none;
+		border: 1px solid transparent;
+		border-radius: 4px;
+
+		
+
+		.icon-bar{
+			background-color: #eee;
+		}
+
+	}
+
+	.navbar-brand{
+		img{
+			width: 200px;
+
+		}
+		
+	}
+
+	.navbar-collapse.in {
+		overflow-y: auto;
+	}
+
+	.navbar-collapse {
+
+
+		ul{
+			margin: 15px 0;
+		}
+	}
+
+	.collapse .in{
+		display: block;
+	}
+	.social-media {
+		list-style: none;
+		position: absolute;
+		right: 70px;
+		top: 122px;
+		a{
+			color: $black;
+			&:hover{
+				color: $action;
+			}
+
+		}
+		li{
+			padding: 0;
+		}
+
+		i{
+
+			font-size: 3em;
+		}
+
+
+	}
 
 	ul{
 		list-style: none;
@@ -24,10 +97,54 @@ nav{
 				}				
 				img{
 					height: auto;
-					width: 100px;
+					width: 75px;
 				}
 			}
 		}
-		
+
+	}
+
+
+
+	@media screen and (max-width: 992px){
+		.main-nav{
+			li{
+				padding: 0 20px; 
+			}
+		}
+	}
+
+
+	@media screen and (min-width: 768px) and (max-width: 1920px){
+		.navbar-brand{
+			display: none;
+		}
+	}
+
+	@media screen and (max-width: 767px){
+		.navbar-collapse{
+			width: 100%;
+			.main-nav{
+				text-align: left;
+				margin: 30px 0 8px;
+
+				ul{
+					border-top: 2px solid #eee;
+				}
+
+				li{
+					display: block;
+					padding: 0;
+				}
+			}
+			img {
+				display: none;
+
+			}
+		}
 	}
 }
+
+
+
+
