--- a/dev/sass/share/_body.scss
+++ b/dev/sass/share/_body.scss
@@ -26,6 +26,10 @@ p{
 	font-family: 'PT Sans', sans-serif;
 }
 
+a{
+	font-family: 'Lato', sans-serif;
+}
+
 span{
 	font-family: 'PT Sans', sans-serif;
 }
@@ -36,12 +40,6 @@ hr {
 	margin-bottom: 20px;
 	border: 0;
 	border-top: 1px solid #000;
-}
-
-@media screen and (max-width: 767px){
-	// .main-message{
-	// 	background: red;
-	// }
 }
 
 
