--- a/dev/public/css/main.css
+++ b/dev/public/css/main.css
@@ -44,11 +44,16 @@ p {
 }
 
 /* line 29, ../../sass/share/_body.scss */
+a {
+  font-family: 'Lato', sans-serif;
+}
+
+/* line 33, ../../sass/share/_body.scss */
 span {
   font-family: 'PT Sans', sans-serif;
 }
 
-/* line 33, ../../sass/share/_body.scss */
+/* line 37, ../../sass/share/_body.scss */
 hr {
   width: 50%;
   margin-top: 20px;
@@ -58,50 +63,50 @@ hr {
 }
 
 @media screen and (max-width: 992px) {
-  /* line 49, ../../sass/share/_body.scss */
+  /* line 47, ../../sass/share/_body.scss */
   h1 {
     font-size: 4em;
   }
 
-  /* line 53, ../../sass/share/_body.scss */
+  /* line 51, ../../sass/share/_body.scss */
   h2 {
     font-size: 3em;
   }
 
-  /* line 57, ../../sass/share/_body.scss */
+  /* line 55, ../../sass/share/_body.scss */
   h3 {
     font-size: 1.3em;
   }
 }
 @media screen and (max-width: 767px) {
-  /* line 67, ../../sass/share/_body.scss */
+  /* line 65, ../../sass/share/_body.scss */
   h1 {
     font-size: 3em;
   }
 
-  /* line 71, ../../sass/share/_body.scss */
+  /* line 69, ../../sass/share/_body.scss */
   h2 {
     font-size: 2em;
     text-align: center;
   }
 
-  /* line 76, ../../sass/share/_body.scss */
+  /* line 74, ../../sass/share/_body.scss */
   h3 {
     font-size: 1.3em;
   }
 
-  /* line 80, ../../sass/share/_body.scss */
+  /* line 78, ../../sass/share/_body.scss */
   .nav {
     text-align: left;
   }
 }
 @media screen and (max-width: 500px) {
-  /* line 86, ../../sass/share/_body.scss */
+  /* line 84, ../../sass/share/_body.scss */
   h1 {
     font-size: 2em;
   }
 
-  /* line 90, ../../sass/share/_body.scss */
+  /* line 88, ../../sass/share/_body.scss */
   h2 {
     font-size: 1.5em;
   }
@@ -186,14 +191,14 @@ nav ul li {
 }
 /* line 90, ../../sass/share/_nav.scss */
 nav ul li a {
-  font-family: 'Roboto Slab', serif;
   font-weight: 100;
   font-size: 1.5em;
   color: #fff;
 }
-/* line 95, ../../sass/share/_nav.scss */
+/* line 94, ../../sass/share/_nav.scss */
 nav ul li a:hover {
-  color: #eee;
+  color: #09B391;
+  text-decoration: none;
 }
 /* line 98, ../../sass/share/_nav.scss */
 nav ul li a img {
@@ -413,18 +418,33 @@ nav ul li a img {
 }
 /* line 13, ../../sass/home-page/_footer-section.scss */
 .created-by i {
-  font-size: 20px;
-  padding: 0 5px;
+  font-size: 13em;
+  color: #09B391;
 }
-/* line 19, ../../sass/home-page/_footer-section.scss */
+/* line 16, ../../sass/home-page/_footer-section.scss */
+.created-by i:after {
+  content: 'top';
+  font-size: .1em;
+  color: #FFF;
+  position: relative;
+  top: -95px;
+  left: -63px;
+}
+@media screen and (max-width: 767px) {
+  /* line 13, ../../sass/home-page/_footer-section.scss */
+  .created-by i {
+    display: none;
+  }
+}
+/* line 32, ../../sass/home-page/_footer-section.scss */
 .created-by .footer-logo {
   padding: 0;
 }
-/* line 22, ../../sass/home-page/_footer-section.scss */
+/* line 35, ../../sass/home-page/_footer-section.scss */
 .created-by .footer-logo img {
   width: 175px;
 }
-/* line 27, ../../sass/home-page/_footer-section.scss */
+/* line 40, ../../sass/home-page/_footer-section.scss */
 .created-by .nav-links {
   padding-top: 5px;
   padding-left: 0;
@@ -432,58 +452,58 @@ nav ul li a img {
   font-size: 13px;
   text-align: center;
 }
-/* line 34, ../../sass/home-page/_footer-section.scss */
+/* line 47, ../../sass/home-page/_footer-section.scss */
 .created-by .nav-links ul {
   padding: 0;
 }
-/* line 39, ../../sass/home-page/_footer-section.scss */
+/* line 52, ../../sass/home-page/_footer-section.scss */
 .created-by .nav-links li {
   margin: 0 2px;
   display: inline-block;
 }
-/* line 43, ../../sass/home-page/_footer-section.scss */
+/* line 56, ../../sass/home-page/_footer-section.scss */
 .created-by .nav-links li + li {
   border-left: 1px solid #000;
   padding: 0 5px;
 }
-/* line 49, ../../sass/home-page/_footer-section.scss */
+/* line 62, ../../sass/home-page/_footer-section.scss */
 .created-by .nav-links a {
   color: #eee;
   text-transform: uppercase;
 }
 @media screen and (max-width: 767px) {
-  /* line 27, ../../sass/home-page/_footer-section.scss */
+  /* line 40, ../../sass/home-page/_footer-section.scss */
   .created-by .nav-links {
     display: none;
   }
 }
-/* line 62, ../../sass/home-page/_footer-section.scss */
+/* line 75, ../../sass/home-page/_footer-section.scss */
 .created-by .social-links li {
   display: inline-block;
 }
-/* line 65, ../../sass/home-page/_footer-section.scss */
+/* line 78, ../../sass/home-page/_footer-section.scss */
 .created-by .social-links ul {
   float: right;
   padding: 0;
   list-style: none;
 }
-/* line 70, ../../sass/home-page/_footer-section.scss */
+/* line 83, ../../sass/home-page/_footer-section.scss */
 .created-by .social-links i {
   color: #09B391;
 }
 @media screen and (max-width: 767px) {
-  /* line 75, ../../sass/home-page/_footer-section.scss */
+  /* line 88, ../../sass/home-page/_footer-section.scss */
   .created-by .social-links ul {
     float: none;
     margin-top: 10px;
     padding-right: 25px;
   }
 }
-/* line 84, ../../sass/home-page/_footer-section.scss */
+/* line 97, ../../sass/home-page/_footer-section.scss */
 .created-by .pull-right {
   position: fixed;
   right: 22px;
-  bottom: 10px;
+  bottom: -10px;
   z-index: 99999;
   color: blue;
 }
