--- a/dev/sass/share/_nav.scss
+++ b/dev/sass/share/_nav.scss
@@ -88,12 +88,12 @@ nav{
 			display: inline-block;
 			padding: 0 40px;
 			a{
-				font-family: 'Roboto Slab', serif;
 				font-weight: 100;
 				font-size: 1.5em;
 				color: #fff;
 				&:hover{
-					color: #eee;
+					color: $action;
+					text-decoration: none;
 				}				
 				img{
 					height: auto;
